syntax = 'proto3';
package protobuf.user;

option go_package = "protobuf/user";

service UserService{
  rpc Signup(SignUpMessage) returns(SignUpResponse);
  rpc VerifyToken(VerifyMessage) returns(VerifyMessageResponse);
}

message SignUpMessage{
  string login = 1;
  string password = 2;
  string name = 3;
  uint64 inn = 4;
}

message SignUpResponse{
  int32 id = 1;
  string token = 2;
}

message VerifyMessage{
  string token = 1;
}

message VerifyMessageResponse{
  oneof response{
    bool is_valid = 1;
    UserMessageResponse user = 2;
  }
}

message UserMessageResponse{
  string login = 1;
  repeated string roles = 2;
}